--- a/index.html
+++ b/index.html
@@ -90,16 +90,16 @@
 		<nav class="navbar navbar-expand-sm justify-content-center">
 		  <ul class="navbar-nav">
 		    <li class="nav-item">
-		      <a class="nav-link" href="#">Home</a>
+		      <a class="nav-link" href="https://svelte-a5aqek.stackblitz.io">Home</a>
 		    </li>
 		    <li class="nav-item">
-		      <a class="nav-link" href="#">Project</a>
+		      <a class="nav-link" href="https://svelte-mckjzv.stackblitz.io">Project</a>
 		    </li>
 		    <li class="nav-item">
-		      <a class="nav-link" href="#">Designs</a>
+		      <a class="nav-link" href="https://svelte-v76etw.stackblitz.io">Designs</a>
 		    </li>
 		     <li class="nav-item">
-		      <a class="nav-link" href="#">Hire Me 🥺</a>
+		      <a class="nav-link" href="https://svelte-1ozyul.stackblitz.io">Hire Me 🥺</a>
 		    </li>
 		  </ul>
 		</nav>
